[tool.poetry]
name = "aoc-discord-bot"
version = "0.1.0"
description = "Advent of Code Leaderboard Discord Bot"
authors = ["Sopy <contact@sopy.one>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"